test/experiments/errors/errorTypes/parsingError.ts
/* eslint-disable */

if (true) {
  while (true) {
    console.log('Info!');
  }
}
